--- a/.github/workflows/learning-actions.yaml
+++ b/.github/workflows/learning-actions.yaml
@@ -14,3 +14,5 @@ jobs:
         run: |
             echo "Hello"
             apt update
+      - name: install packages
+        run: sudo apt install docker -y
