--- a/.github/workflows/learning-actions.yaml
+++ b/.github/workflows/learning-actions.yaml
@@ -14,3 +14,5 @@ jobs:
         run: |
             echo "Hello"
             sudo apt update
+      - name: Install Package
+        run: sudo apt install nginx -y
